--- a/banquetBuddy/core/templates/core/base.html
+++ b/banquetBuddy/core/templates/core/base.html
@@ -22,7 +22,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Caterings</a>
+                        <a class="nav-link" href="/caterings">Caterings</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Services</a>
