--- a/banquetBuddy/caterings/templates/listar_caterings.html
+++ b/banquetBuddy/caterings/templates/listar_caterings.html
@@ -6,6 +6,17 @@
 
 <div class="container mt-4">
     <h1 class="mb-4">Listado de Caterings</h1>
+    <form method="post" action="{% url 'listar_caterings' %}" id="miFormulario" class="mb-4">
+        {% csrf_token %}
+        <div class="input-group">
+            <input type="text" class="form-control bg-light border-0 small" placeholder="Buscar..." id="buscar" name="buscar" value="{{ buscar }}">
+            <div class="input-group-append">
+                <button class="btn btn-primary" type="submit">
+                    <i class="fa fa-search" aria-hidden="true"></i>
+                </button>
+            </div>
+        </div>
+    </form>
     <div class="row">
         {% for catering in caterings %}
             <div class="col-md-6">
@@ -24,3 +35,22 @@
     </div>
 </div>
 {% endblock %}
+
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        
+        const buscar = document.getElementById('buscar');
+
+        buscar.addEventListener('keydown', function(event) {
+            if (event.key === 'Enter' || event.keyCode === 13) {
+                // Evita la acción predeterminada para que no se envíe el formulario automáticamente
+                event.preventDefault();
+
+                // Verifica si hay un valor en el campo de búsqueda antes de enviar el formulario
+                if (buscar.value.trim() !== '') {
+                    document.getElementById('miFormulario').submit();
+                }
+            }
+        });
+    });
+</script>
