--- a/banquetBuddy/caterings/templates/catering_detail.html
+++ b/banquetBuddy/caterings/templates/catering_detail.html
@@ -11,6 +11,6 @@
     {% if catering.cateringcompany.logo %}
         <img src="data:image/png;base64,{{ catering.cateringcompany.logo }}" class="img-fluid" alt="Logo">
     {% endif %}
-    <!-- Aquí puedes agregar más detalles según tu modelo -->
+    <a href="{% url 'booking_process' catering.id %}" class="btn btn-primary">Book</a>
 </div>
 {% endblock %}
