--- a/banquetBuddy/caterings/templates/booking_process.html
+++ b/banquetBuddy/caterings/templates/booking_process.html
@@ -2,6 +2,7 @@
 {% load static %}
 
 {% block content %}
+
 <div class="container mt-4">
     <h1>Book Catering: {{ catering.name }}</h1>
     <p><strong>Description:</strong> {{ catering.description }}</p>
@@ -24,6 +25,10 @@
             <div class="alert alert-danger">The event date cannot be in the past.</div>
         {% endif %}
 
+        {% if form_error_date_selected %}
+            <div class="alert alert-danger">The selected date is already booked.</div>
+        {% endif %}
+
         <div class="form-group">
             <label for="event_date">Event Date:</label>
             <input type="date" name="event_date" class="form-control {% if form_error %}is-invalid{% endif %}" required>
@@ -33,8 +38,37 @@
             <label for="number_guests">Number of Guests:</label>
             <input type="number" name="number_guests" class="form-control {% if form_error %}is-invalid{% endif %}" required>
         </div>
-
-        <button type="submit" class="btn btn-primary">Confirm Reservation</button>
+        <div class="row">
+            {% for menu in menus %}
+            <div class="col-md-4 mb-4">
+                <div class="card h-100 d-flex flex-column shadow-sm custom-card-bg">
+                  <div class="card-body flex-fill d-flex flex-column">
+                    <h5 class="card-title">{{ menu.name }}</h5>
+                    <p class="card-text">{{ menu.description }}</p>
+                    <p class="card-text"><strong>Plates:</strong></p>
+                    <ul class="list-unstyled">
+                      {% for plate in menu.plates %}
+                        <li>{{ plate }}</li>
+                      {% endfor %}
+                    </ul>
+                    <div class="mt-auto">
+                      <div class="d-flex justify-content-between align-items-center">
+                        <div class="btn-group">
+                          <button type="button" class="btn btn-sm btn-outline-success">Select</button>
+                        </div>
+                        <small class="text-muted">{{ menu.price }}</small>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            {% endfor %}
+          </div>
+        </br>
+        <button type="submit" class="btn btn-primary">Confirm</button>
+        <p></p>
     </form>
 </div>
+
 {% endblock %}
+
