--- a/banquetBuddy/caterings/templates/catering_review.html
+++ b/banquetBuddy/caterings/templates/catering_review.html
@@ -18,19 +18,18 @@
         </div>
 
         <div class="form-group">
-            <label for="rating">Rating:</label>
-            <div class="rating">
-                <input type="radio" id="star5" name="rating" value="5">
-                <label for="star5"></label>
-                <input type="radio" id="star4" name="rating" value="4">
-                <label for="star4"></label>
-                <input type="radio" id="star3" name="rating" value="3">
-                <label for="star3"></label>
-                <input type="radio" id="star2" name="rating" value="2">
-                <label for="star2"></label>
-                <input type="radio" id="star1" name="rating" value="1">
-                <label for="star1"></label>
-            </div>
+            <p>Rating: <span class="star-rating">
+                <label for="rate-1" style="--i:1"><i class="fa-solid fa-star"></i></label>
+                <input type="radio" name="rating" id="rate-1" value="1">
+                <label for="rate-2" style="--i:2"><i class="fa-solid fa-star"></i></label>
+                <input type="radio" name="rating" id="rate-2" value="2" checked>
+                <label for="rate-3" style="--i:3"><i class="fa-solid fa-star"></i></label>
+                <input type="radio" name="rating" id="rate-3" value="3">
+                <label for="rate-4" style="--i:4"><i class="fa-solid fa-star"></i></label>
+                <input type="radio" name="rating" id="rate-4" value="4">
+                <label for="rate-5" style="--i:5"><i class="fa-solid fa-star"></i></label>
+                <input type="radio" name="rating" id="rate-5" value="5">
+            </span></p>
         </div>
 
         <button type="submit" class="btn btn-primary">Confirm Review</button>
@@ -38,46 +37,37 @@
 </div>
 
 <style>
-    .rating {
-        unicode-bidi: bidi-override;
-        direction: rtl;
-    }
+.star-rating {
+	white-space: nowrap;
+}
+.star-rating [type="radio"] {
+	appearance: none;
+}
+.star-rating i {
+	font-size: 1.2em;
+	transition: 0.3s;
+}
 
-    .rating > span {
-        display: inline-block;
-        position: relative;
-        width: 1.1em;
-        z-index: 1; /* Asegura que las estrellas seleccionadas estén por encima de las no seleccionadas */
-    }
+.star-rating label:is(:hover, :has(~ :hover)) i {
+	transform: scale(1.35);
+	color: #fffdba;
+	animation: jump 0.5s calc(0.3s + (var(--i) - 1) * 0.15s) alternate infinite;
+}
+.star-rating label:has(~ :checked) i {
+	color: #faec1b;
+	text-shadow: 0 0 2px #ffffff, 0 0 10px #ffee58;
+}
 
-    .rating > span:hover:before,
-    .rating > span:hover ~ span:before {
-        content: "\2605";
-        position: absolute;
-        z-index: 2; /* Asegura que las estrellas seleccionadas estén por encima de las no seleccionadas */
-    }
+@keyframes jump {
+	0%,
+	50% {
+		transform: translatey(0) scale(1.35);
+	}
+	100% {
+		transform: translatey(-15%) scale(1.35);
+	}
+}
 
-    .rating > span:hover:before {
-        color: gold;
-    }
 
-    .rating > input[type="radio"] {
-        display: none;
-    }
-
-    .rating > label:before {
-        content: "\2606";
-        position: relative;
-        z-index: 1; /* Asegura que las estrellas seleccionadas estén por encima de las no seleccionadas */
-    }
-
-    .rating > input[type="radio"]:checked ~ label:before,
-    .rating:not(:checked) > label:hover:before,
-    .rating:not(:checked) > label:hover ~ label:before {
-        content: "\2605";
-        color: gold;
-        position: absolute;
-        z-index: 2; /* Asegura que las estrellas seleccionadas estén por encima de las no seleccionadas */
-    }
 </style>
 {% endblock %}
