--- a/banquetBuddy/catering_owners/templates/registro_company.html
+++ b/banquetBuddy/catering_owners/templates/registro_company.html
@@ -17,12 +17,13 @@
         <div class="col-md-7 mx-auto">
           <div class="register-form">
             <h2 class="register-heading"><u>Sign Up</u></h2>
-            <form method="post">
+            <form method="post" enctype="multipart/form-data">
               {% csrf_token %}
               <div class="row">
                 <div class="col-md-6">
                   {% for field in user_form %}
                   <div class="form-group">
+                    {% if field.field.widget.input_type != 'file' %}
                     <input
                       type="{{ field.field.widget.input_type }}"
                       name="{{ field.html_name }}"
@@ -31,6 +32,14 @@
                       value="{% if field.value %}{{ field.value }}{% endif %}"
                       required
                     />
+                    {% else %}
+                    <input
+                      type="file"
+                      name="{{ field.html_name }}"
+                      class="rounded-input {% if field.errors %}is-invalid{% endif %}"
+                      required
+                    />
+                    {% endif %}
                     {% for error in field.errors %}
                     <div class="alert alert-danger">{{ error }}</div>
                     {% endfor %}
@@ -40,6 +49,7 @@
                 <div class="col-md-6">
                   {% for field in company_form %}
                   <div class="form-group">
+                    {% if field.field.widget.input_type != 'file' %}
                     <input
                       type="{{ field.field.widget.input_type }}"
                       name="{{ field.html_name }}"
@@ -48,6 +58,14 @@
                       value="{% if field.value %}{{ field.value }}{% endif %}"
                       required
                     />
+                    {% else %}
+                    <input
+                      type="file"
+                      name="{{ field.html_name }}"
+                      class="rounded-input {% if field.errors %}is-invalid{% endif %}"
+                      required
+                    />
+                    {% endif %}
                     {% for error in field.errors %}
                     <div class="alert alert-danger">{{ error }}</div>
                     {% endfor %}
