--- a/banquetBuddy/catering_owners/templates/applicants_list.html
+++ b/banquetBuddy/catering_owners/templates/applicants_list.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<html lang="en">
+
 <div class="container mt-4">
     <div class="row justify-content-center mt-3">
         <div class="col-md-8 col-lg-16">
@@ -49,10 +49,10 @@
             <tbody>
                 {% for applicant in applicants %}
                 <tr>
-                    <td>{{ applicant.english_level }}</td>
-                    <td>{{ applicant.profession }}</td>
-                    <td>{{ applicant.experience }}</td>
-                    <td>{{ applicant.skills }}</td>
+                    <td>{{ applicant.employee.english_level }}</td>
+                    <td>{{ applicant.employee.profession }}</td>
+                    <td>{{ applicant.employee.experience }}</td>
+                    <td>{{ applicant.employee.skills }}</td>
                     <td>
                         {% if applicant.curriculum %}
                         <a href="{{ applicant.curriculum.url }}">View Curriculum</a>
@@ -68,6 +68,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFOnpDljFH8zYZVp0LN37AUaRB1 EjwRsYH/@IcsVQTsNznExv0m0MzQK8L" crossorigin="anonymous"></script>
 </body>
-</html>
+
 
 {% endblock %}
