--- a/banquetBuddy/core/templates/core/base.html
+++ b/banquetBuddy/core/templates/core/base.html
@@ -46,6 +46,7 @@
                     <input class="form-control mr-sm-2 search-bar" type="search" placeholder="Search" aria-label="Search" id="search-input">
                 </form>
                 {% if request.user.is_authenticated %}
+                    <a class="nav-link" href="{% url 'my_books' %}">Books</a>
                     <a href="{% url 'profile' %}" class="text-decoration-none">
                         <i class="fas fa-user"></i>
                     </a>
