--- a/banquetBuddy/core/templates/core/home.html
+++ b/banquetBuddy/core/templates/core/home.html
@@ -2,20 +2,53 @@
 {% load static %}
 
 {% block content %}
-{% for message in messages %}
-    <div class="alert alert-{{ message.tags }}">{{ message }}</div>
-{% endfor %}
+    <div class="container mt-4">
+        <form method="post" action="{% url 'listar_caterings' %}" id="miFormulario" class="mb-4">
+            {% csrf_token %}
+            <div class="input-group">
+                <input type="text" class="form-control bg-light border-0 large-search-box" placeholder="Buscar..." id="buscar" name="buscar" value="{{ buscar }}">
+                <div class="input-group-append">
+                    <button class="btn btn-custom" type="submit">
+                        <i class="fas fa-search fa-lg"></i>
+                    </button>
+                </div>
+            </div>
+        </form>        
+    </div>
     <div class="container">
         <div class="row">
             <div class="col-12 text-center">
-                <img src="{% static 'core/images/Logo-transparente.png' %}" alt="Logo" class="logo-image">
+                <img src="{% static 'core/images/Logo-transparente.png' %}" alt="Logo" class="logo-image img-fluid" style="max-width: 200px;">
             </div>
-            {% if not request.user.is_authenticated %}
-            <div class="col-12 text-center mt-4 btn-container">
-                <a href="/login" class="btn btn-login mr-3">Log in</a>
-                <a href="/register_choice" class="btn btn-signup ml-3">Sign up</a>
-            </div>         
-            {% endif %}        
         </div>
     </div>
+    {% for message in messages %}
+        <div class="alert alert-{{ message.tags }}">{{ message }}</div>
+    {% endfor %}
 {% endblock %}
+
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        const buscar = document.getElementById('buscar');
+        buscar.addEventListener('keydown', function(event) {
+            if (event.key === 'Enter' || event.keyCode === 13) {
+                event.preventDefault();
+                if (buscar.value.trim() !== '') {
+                    document.getElementById('miFormulario').submit();
+                }
+            }
+        });
+    });
+</script>
+
+<style>
+    .large-search-box {
+        height: 50px; /* Adjust as needed */
+        font-size: 1.2rem; /* Adjust as needed */
+    }  
+    .btn-custom {
+        background-color: #02483E;
+        color: white;
+        border-color: #02483E;
+    }
+</style>
