--- a/banquetBuddy/core/templates/core/profile_company_edit.html
+++ b/banquetBuddy/core/templates/core/profile_company_edit.html
@@ -1,4 +1,6 @@
-{% extends 'core/base.html' %} {% load static %} {% block content %}
+{% extends 'core/base.html' %}
+{% load static %}
+{% block content %}
 
 <div class="container mt-4 mb-4">
   <div class="row justify-content-center">
@@ -12,33 +14,24 @@
           </div>
           {% endif %}
 
-          <form method="post" action="{% url 'profile_company_edit' %}" id="companyForm">
+          <form method="post" action="{% url 'catering_profile_edit' %}" id="cateringForm"
+            enctype="multipart/form-data">
             {% csrf_token %}
             <div class="form-group">
-              <label for="service_description" class="text-white">service_description:</label>
-              <input type="text" class="form-control" id="service_description" placeholder="Descripción del servicio"
-                value="{{ user.service_description }}" name="service_description" />
+              <label for="service_description" class="text-white">Descripción del Servicio:</label>
+              {{ form.service_description }}
             </div>
             <div class="form-group">
-              <label for="logo" class="text-white">Logo:</label>
-              <input type="file" class="form-control-file" id="image" name="image" accept="image/*" />
+              <label for="cuisine_types" class="text-white">Tipos de Cocina:</label>
+              {{ form.cuisine_types }}
             </div>
             <div class="form-group">
-              <label for="cuisine_type" class="text-white">Seleccionar Tipo de Cocina:</label>
-              <select class="form-control" id="cuisine_type" name="cuisine_type">
-                {% for key, value in cuisine_types %}
-                <option value="{{ key }}">{{ value }}</option>
-                {% endfor %}
-              </select>
+              <label for="logo" class="text-white">Logotipo:</label>
+              {{ form.logo }}
             </div>
+            <button type="submit" class="btn btn-primary" style="background-color: #54bfaf">Guardar cambios</button>
           </form>
         </div>
-      </div>
-      <div class="text-center mt-3">
-        <!-- Botón fuera del formulario pero dentro del div col-md-6 -->
-        <button type="submit" form="companyForm" class="btn btn-primary" style="background-color: #54bfaf">
-          Guardar cambios
-        </button>
       </div>
     </div>
   </div>
