fix: Editar compañia arreglado

--- a/banquetBuddy/catering_owners/templates/profile_company_edit.html
+++ b/banquetBuddy/catering_owners/templates/profile_company_edit.html
@@ -26,7 +26,7 @@
               {{ form.cuisine_types }}
             </div>
             <div class="form-group">
-              <label for="logo" class="text-white">Logotipo:</label>
+              <label for="logo" class="text-white">Logotipo:</label><br>
               {{ form.logo }}
             </div>
             <button type="submit" class="btn btn-primary" style="background-color: #54bfaf">Guardar cambios</button>
