--- a/banquetBuddy/catering_owners/templates/profile_company_edit.html
+++ b/banquetBuddy/catering_owners/templates/profile_company_edit.html
@@ -2,39 +2,22 @@
 {% load static %}
 {% block content %}
 
-<div class="container mt-4 mb-4">
-  <div class="row justify-content-center">
-    <div class="col-md-6">
-      <div class="card" style="background-color: #02483e">
-        <div class="card-body">
-          <h2 class="card-title text-center text-white">Editar Perfil</h2>
-          {% if messages %}
-          <div class="alert alert-danger text-center" role="alert">
-            {% for message in messages %} {{ message }} {% endfor %}
-          </div>
-          {% endif %}
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Edit Catering Company</title>
+</head>
 
-          <form method="post" action="{% url 'catering_profile_edit' %}" id="cateringForm"
-            enctype="multipart/form-data">
-            {% csrf_token %}
-            <div class="form-group">
-              <label for="service_description" class="text-white">Descripción del Servicio:</label>
-              {{ form.service_description }}
-            </div>
-            <div class="form-group">
-              <label for="cuisine_types" class="text-white">Tipos de Cocina:</label>
-              {{ form.cuisine_types }}
-            </div>
-            <div class="form-group">
-              <label for="logo" class="text-white">Logotipo:</label><br>
-              {{ form.logo }}
-            </div>
-            <button type="submit" class="btn btn-primary" style="background-color: #54bfaf">Guardar cambios</button>
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+<body>
+  <h1>Edit Catering Company</h1>
+  <form method="post" enctype="multipart/form-data">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Submit</button>
+  </form>
+</body>
+
+</html>
+
 
 {% endblock %}
