--- a/banquetBuddy/catering_particular/templates/book_edit.html
+++ b/banquetBuddy/catering_particular/templates/book_edit.html
@@ -5,13 +5,19 @@
 
 <div class="container mt-4">
     <h1>Edit Event: {{ event.name }}</h1>
-    <form method="post" action="/particular/{{ event.id }}/edit">
+    <form method="post" action="{% url 'book_edit' event.id %}">
         {% csrf_token %}
 
         {% if messages %}
             {% for message in messages %}
                 <div class="alert alert-{{ message.tags }}">{{ message }}</div>
             {% endfor %}
+        {% endif %}
+
+        {% if error %}
+            <div class="alert alert-danger" role="alert">
+                {{ error }}
+            </div>
         {% endif %}
 
         <div class="form-group">
@@ -33,12 +39,6 @@
                       <div class="card-body flex-fill d-flex flex-column">
                         <h5 class="card-title">{{ menu.name }}</h5>
                         <p class="card-text">{{ menu.description }}</p>
-                        <p class="card-text"><strong>Plates:</strong></p>
-                        <ul class="list-unstyled">
-                          {% for plate in menu.plates %}
-                            <li>{{ plate }}</li>
-                          {% endfor %}
-                        </ul>
                         <div class="mt-auto">
                           <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
