--- a/banquetBuddy/catering_employees/templates/employee_offer_list.html
+++ b/banquetBuddy/catering_employees/templates/employee_offer_list.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 {% extends 'core/base.html' %}
+{% load custom_tags %}
 {% load static %}
 
 {% block content %}
@@ -61,7 +62,11 @@
             <h2 class="offerTitle">{{ offer.title }}</h2>
             <h4>{{ offer.location }}</h4>
             <p>{{ offer.description }}</p>
+            {% if applications|get_value:offer.id %}
+            <p style="color: red;">You've already applied for this offer</p>
+        {% else %}
              <button class="apply-button" onclick="applyToOffer({{ offer.id }})">Apply</button>
+        {% endif %}
         </div>
         {% endfor %}
     </div>
