feat : integrada la funcionalidad con la app
Se ha integrado la funcionalidad para ver como empleado el estado de las
ofertas en el resto de la app.

--- a/banquetBuddy/catering_employees/templates/application_employee_list.html
+++ b/banquetBuddy/catering_employees/templates/application_employee_list.html
@@ -24,9 +24,9 @@
                 {% for application in applications %}
                 <tr>
                     <td>{{ application.offer.title }}</td>
-                    <td>{{ applicantion.offer.location }}</td>
-                    <td>{{ applicantion.date_application }}</td>
-                    <td>{{ applicantion.state }}</td>
+                    <td>{{ application.offer.location }}</td>
+                    <td>{{ application.date_application }}</td>
+                    <td>{{ application.state }}</td>
                 </tr>
                 {% endfor %}
             </tbody>
