--- a/banquetBuddy/core/templates/core/base.html
+++ b/banquetBuddy/core/templates/core/base.html
@@ -38,9 +38,12 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">Calendar</a>
                     </li>
-                    {% if user.is_authenticated %}
+                    {% if request.user.is_authenticated and request.user.EmployeeUsername %}
                     <li class="nav-item">
                         <a class="nav-link" href="/employeeOfferList">Offers</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/JobApplicationList">Offers applied</a>
                     </li>
                     {% endif %}
                 </ul>
