--- a/banquetBuddy/catering_owners/templates/offers/create_offer.html
+++ b/banquetBuddy/catering_owners/templates/offers/create_offer.html
@@ -1,4 +1,4 @@
-{% extends 'core/base.html' %}
+{% extends 'offers/base.html' %}
 {% load static %}
 
 {% block content %}
@@ -44,23 +44,23 @@
 
 
 </style>
-<h1 style="margin-top: 5%;">Crear nueva oferta de trabajo</h1>
+<h1 style="margin-top: 5%;">Create new job offer</h1>
     <div class="form">
-        <form action="/guardar/" method="post">
+        <form action="{% url 'create_offer' %}" method="post">
             {% csrf_token %}
-            <label for="id_title">Título:</label>
+            <label for="id_title">Title:</label>
             <input type="text" id="id_title" name="title" required><br>
 
-            <label for="id_description">Descripción:</label>
+            <label for="id_description">Description:</label>
             <textarea id="id_description" name="description"  required></textarea><br>
 
-            <label for="id_requirements">Requisitos:</label>
+            <label for="id_requirements">Requirements:</label>
             <textarea id="id_requirements" name="requirements"  required></textarea><br>
 
-            <label for="id_location">Ubicación:</label>
+            <label for="id_location">Location:</label>
             <input type="text" id="id_location" name="location" required><br>
 
-            <input type="submit" value="Guardar">
+            <input type="submit" value="Create offer">
         </form>
     </div>
 {% endblock %}
