--- a/banquetBuddy/catering_owners/templates/list_menus.html
+++ b/banquetBuddy/catering_owners/templates/list_menus.html
@@ -9,11 +9,15 @@
 </style>
 
 {% if messages %}
-<ul class="messages">
-    {% for message in messages %}
-    <li class="{{ message.tags }}">{{ message }}</li>
-    {% endfor %}
-</ul>
+<div class="container mt-3">
+    <div class="alert alert-success" role="alert">
+        <ul class="list-unstyled mb-0">
+            {% for message in messages %}
+            <li class="{{ message.tags }}">{{ message }}</li>
+            {% endfor %}
+        </ul>
+    </div>
+</div>
 {% endif %}
 
 
