--- a/banquetBuddy/core/templates/core/base.html
+++ b/banquetBuddy/core/templates/core/base.html
@@ -22,12 +22,10 @@
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav mr-auto">
-                    {% if request.user.is_authenticated %}
-                        {% if is_particular %}
-                            <li class="nav-item">
-                                <a class="nav-link" href="/caterings">Caterings</a>
-                            </li>
-                        {% endif %}
+                    {% if request.user.is_authenticated and request.user.ParticularUsername %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="/caterings">Caterings</a>
+                        </li>
                     {% endif %}
                     <li class="nav-item">
                         <a class="nav-link" href="#">Services</a>
